# ChangeLog for sec-policy/selinux-base-policy
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sec-policy/selinux-base-policy/ChangeLog,v 1.72 2011/04/16 13:02:44 blueness Exp $

*selinux-base-policy-2.20101213-r15 (14 May 2011)

  14 May 2011; <swift@gentoo.org> +selinux-base-policy-2.20101213-r15.ebuild,
  +files/patchbundle-selinux-base-policy-2.20101213-r15.tar.bz2:
  Correct file contexts for /lib64

*selinux-base-policy-2.20101213-r14 (13 May 2011)

  13 May 2011; <swift@gentoo.org> -selinux-base-policy-2.20101213-r13.ebuild,
  +selinux-base-policy-2.20101213-r14.ebuild,
  -files/patchbundle-selinux-base-policy-2.20101213-r13.tar.bz2,
  +files/patchbundle-selinux-base-policy-2.20101213-r14.tar.bz2:
  Update with support for openrc

*selinux-base-policy-2.20101213-r13 (02 May 2011)

  02 May 2011; <swift@gentoo.org>
  +selinux-base-policy-2.20101213-r13.ebuild,
  +files/patchbundle-selinux-base-policy-2.20101213-r13.tar.bz2,
  +files/config, +files/modules.conf.strict,
  +files/modules.conf.strict.20090730, +files/modules.conf.targeted,
  +files/modules.conf.targeted.20090730, +metadata.xml:
  Make UBAC optional (#257111 and #306393), use portage_srcrepo_t for live
  ebuilds and match mdadm policy with upstream

*selinux-base-policy-2.20101213-r12 (16 Apr 2011)
*selinux-base-policy-2.20101213-r11 (16 Apr 2011)

  16 Apr 2011; Anthony G. Basile <blueness@gentoo.org>
  +selinux-base-policy-2.20101213-r11.ebuild,
  +selinux-base-policy-2.20101213-r12.ebuild,
  +files/patchbundle-selinux-base-policy-2.20101213-r11.tar.bz2,
  +files/patchbundle-selinux-base-policy-2.20101213-r12.tar.bz2:
  Added new patchbundles for rev bumps to base policy 2.20101213

*selinux-base-policy-2.20101213-r10 (07 Mar 2011)
*selinux-base-policy-2.20101213-r9 (07 Mar 2011)

  07 Mar 2011; Anthony G. Basile <blueness@gentoo.org>
  +selinux-base-policy-2.20101213-r9.ebuild,
  +selinux-base-policy-2.20101213-r10.ebuild,